--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style/style.css" />
-        <link rel="shortcut icon" href="./icons8-tempo-16.png" type="image/x-icon" />
-        <title>Document</title>
+        <link
+            rel="shortcut icon"
+            href="./icons8-tempo-16.png"
+            type="image/x-icon"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <title>Cronometro</title>
     </head>
     <body>
+        <div class="stopwatch">
+            <h2 id="timer">00:00:00:000</h2>
+
+            <div id="actions">
+                <button id="reset">
+                    <i class="fa-solid fa-redo"></i>
+                </button>
+                <button id="power" action="start">
+                    <i class="fa-solid fa-play"></i>
+                </button>
+                <button id="mark">
+                    <i class="fa-solid fa-flag"></i>
+                </button>
+            </div>
+        </div>
+
+        <div id="marks-list"></div>
+
         <script src="./js/script.js"></script>
     </body>
 </html>
