--- a/index.html
+++ b/index.html
@@ -2,40 +2,22 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style/style.css" />
-        <link
-            rel="shortcut icon"
-            href="./icons8-tempo-16.png"
-            type="image/x-icon"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+        <link rel="shortcut icon" href="./icons8-tempo-16.png" type="image/x-icon">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Cronometro</title>
     </head>
     <body>
-        <div class="stopwatch">
+        <div id="stopwatch">
             <h2 id="timer">00:00:00:00</h2>
-
             <div id="actions">
-                <button id="reset">
-                    <i class="fa-solid fa-redo"></i>
-                </button>
-                <button id="power" action="start">
-                    <i class="fa-solid fa-play"></i>
-                </button>
-                <button id="mark">
-                    <i class="fa-solid fa-flag"></i>
-                </button>
+                <button id="reset"><i class="fa-solid fa-redo"></i></button>
+                <button id="power" action="start"><i class="fa-solid fa-play"></i></button>
+                <button id="mark"><i class="fa-solid fa-flag"></i></button>
             </div>
-        </div>
-
-        <div id="marks-list"></div>
+            <div id="marks-list"></div></div>
 
         <script src="./js/script.js"></script>
     </body>
